<resources>
    <string name="app_name">Wish List App</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="btn_addWish">Add Wish</string>
    <string name="menu_addWish">Add</string>
    <string name="menu_cancelWish">Add</string>
    <string name="no_account_sign_up">Register if you have no account</string>
    <string name="select_wish_image">Select Wish Image</string>
    <string name="change_wish_image">Change Wish Image</string>
    <string name="hint_wish_name">Wish Name</string>
    <string name="hint_wish_time">Wish Time</string>
    <string name="hint_wish_description">Description </string>
    <string name="button_addWish">Add Wish</string>
    <string name="menu_add_wish">Add</string>
    <string name="enter_wish_name"> Please enter a wish name </string>
    <string name="save_wish"> Save Wish </string>
    <string name="button_addImage"> Add Image </string>

</resources>